--- a/singolo1.html
+++ b/singolo1.html
@@ -3,7 +3,35 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="singolo1.css" />
+    <link />
     <title>Singolo</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="singolo-logo">
+        <h4>SINGOLO<span>*</span></h4>
+      </div>
+      <nav>
+        <ul class="nav-links">
+          <li>
+            <a href="#">Home</a>
+          </li>
+          <li>
+            <a href="#">Services</a>
+          </li>
+          <li>
+            <a href="#">Portfolio</a>
+          </li>
+          <li>
+            <a href="#">About</a>
+          </li>
+          <li>
+            <a href="#">Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main></main>
+  </body>
 </html>
