feat: add slider with phones and buttons

--- a/singolo1.html
+++ b/singolo1.html
@@ -32,6 +32,18 @@
         </ul>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <div class="slider">
+        <button class="left-button" type="button"></button>
+        <div class="vertical">
+          <img src="./assests/images/vertical.png" />
+        </div>
+        <div class="horizontal">
+          <img src="./assests/images/horizontal.png" />
+        </div>
+        <button class="right-button" type="button"></button>
+      </div>
+      <div></div>
+    </main>
   </body>
 </html>
