feat: add our services and paragraph

--- a/singolo1.html
+++ b/singolo1.html
@@ -43,7 +43,15 @@
         </div>
         <button class="right-button" type="button"></button>
       </div>
-      <div></div>
+      <div class="content">
+        <h3>Our Services</h3>
+        <p>
+          Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum.
+          Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget
+          lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo,
+          tortor mauris condimentum nibh.
+        </p>
+      </div>
     </main>
   </body>
 </html>
