feat: add flex box

--- a/singolo1.html
+++ b/singolo1.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <header>
-      <div class="singolo-logo">
-        <h4>SINGOLO<span>*</span></h4>
+      <div>
+        <h4 class="singolo-logo">SINGOLO<span>*</span></h4>
       </div>
       <nav>
         <ul class="nav-links">
@@ -43,14 +43,90 @@
         </div>
         <button class="right-button" type="button"></button>
       </div>
-      <div class="content">
-        <h3>Our Services</h3>
-        <p>
-          Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum.
-          Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget
-          lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo,
-          tortor mauris condimentum nibh.
-        </p>
+      <div class="services">
+        <div class="content">
+          <h2 class="service">Our Services</h2>
+          <p class="long-text">
+            Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum.
+            Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget
+            lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo,
+            tortor mauris condimentum nibh.
+          </p>
+        </div></br>
+        <div class="row">
+          <div class="box">
+            <div class="box-icon-wrapper">
+              <img class="icon" src="./assests/images/pen.svg" alt="pen" />
+            </div>
+            <article>
+              <h3>Custom Design</h3>
+              <p>
+                Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam
+                laoreet, viverra lacus ut, ultrices velit.
+              </p>
+            </article>
+          </div>
+          <div class="box">
+            <div class="box-icon-wrapper">
+              <img class="icon" src="./assests/images/bulb.svg" alt="bulb" />
+            </div>
+            <article>
+              <h3>Inovative Ideas</h3>
+              <p>
+                Quisque luctus, quam eget molestie com- modo, lacus purus cursus
+                purus, nec rutrum tellus dolor id lorem.
+              </p>
+            </article>
+          </div>
+          <div class="box">
+            <div class="box-icon-wrapper">
+              <img class="icon" src="./assests/images/heart.svg" alt="heart" />
+            </div>
+            <article>
+              <h3>Love Is The Answer</h3>
+              <p>
+                Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis,
+                et consequat felis. Quisque condimentum.
+              </p>
+            </article>
+          </div>
+          <div class="box">
+            <div class="box-icon-wrapper">
+              <img class="icon" src="./assests/images/phone.svg" alt="phone" />
+            </div>
+            <article>
+              <h3>Responsive Layout</h3>
+              <p>
+                Sed porttitor placerat rhoncus. In at nunc tellus. Maecenas
+                blandit nunc ligula. Prae- sent elit leo.
+              </p>
+            </article>
+          </div>
+          <div class="box">
+            <div class="box-icon-wrapper">
+              <img class="icon" src="./assests/images/bubble.svg" alt="bubble" />
+            </div>
+            <article>
+              <h3>24 / 7 Support</h3>
+              <p>
+                Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi. Nulla
+                a sem erat. Pellen- tesque egestas venenatis lorem.
+              </p>
+            </article>
+          </div>
+          <div class="box">
+            <div class="box-icon-wrapper">
+              <img class="icon" src="./assests/images/star.svg" alt="star" />
+            </div>
+            <article>
+              <h3>Feel Like A Star</h3>
+              <p>
+                Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh.
+                Fusce vitae aliquam tellus.
+              </p>
+            </article>
+          </div>
+        </div>
       </div>
     </main>
   </body>
