feat: add singolo index.html and style.css

--- a/singolo2.html
+++ b/singolo2.html
@@ -12,97 +12,99 @@
   </head>
   <body>
     <main>
-      <div class="bg-color">
-        <h1 class="portfolio">Portfolio</h1>
-        <p class="long-text">
-          Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget
-          lacinia odio sem nec elit.
-        </p>
-        <div class="buttons">
-          <button class="active" type="button">All</button>
-          <button type="button">Web Design</button>
-          <button type="button">Graphic Design</button>
-          <button type="button">Artwork</button>
-        </div>
-        <div class="row">
-          <!-- I was going to use object fit in css, but there was not taken the center part of the pics.(various parts), then i have to cut the pics on Ps -->
-          <div class="image-wrap">
-            <img src="./assests/images/ship.png" />
-            <img class="pic" src="./assests/images/girl.png" />
-            <img class="pic" src="./assests/images/city.png" />
-            <img class="pic" src="./assests/images/robot.png" />
-            <img src="./assests/images/monster1.png" />
-            <img class="pic" src="./assests/images/sdk.png" />
-            <img class="pic" src="./assests/images/strange.png" />
-            <img class="pic" src="./assests/images/birds.png" />
-            <img src="./assests/images/monster2.png" />
-            <img class="pic" src="./assests/images/reel.png" />
-            <img class="pic" src="./assests/images/monster3.png" />
-            <img class="pic" src="./assests/images/strange2.png" />
-            <!-- hidden elemets -->
-            <img class="pic" src="./assests/images/monster3.png" />
-            <img class="pic" src="./assests/images/strange2.png" />
-            <!-- hidden elements -->
-          </div>
-        </div>
-      </div>
-      <div class="container">
-        <div class="content">
-          <h3>About Us</h3>
+      <div class="singolo-2">
+        <div class="bg-color">
+          <h1 class="portfolio">Portfolio</h1>
           <p class="long-text">
-            Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum.
-            Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget
-            lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo,
-            tortor mauris condimentum nibh.
+            Duis mollis, est non commodo luctus, nisi erat porttitor ligula,
+            eget lacinia odio sem nec elit.
           </p>
+          <div class="buttons">
+            <button class="active" type="button">All</button>
+            <button type="button">Web Design</button>
+            <button type="button">Graphic Design</button>
+            <button type="button">Artwork</button>
+          </div>
+          <div class="row2">
+            <!-- I was going to use object fit in css, but there was not taken the center part of the pics.(various parts), then i have to cut the pics on Ps -->
+            <div class="image-wrap">
+              <img src="./assests/images/ship.png" />
+              <img class="pic" src="./assests/images/girl.png" />
+              <img class="pic" src="./assests/images/city.png" />
+              <img class="pic" src="./assests/images/robot.png" />
+              <img src="./assests/images/monster1.png" />
+              <img class="pic" src="./assests/images/sdk.png" />
+              <img class="pic" src="./assests/images/strange.png" />
+              <img class="pic" src="./assests/images/birds.png" />
+              <img src="./assests/images/monster2.png" />
+              <img class="pic" src="./assests/images/reel.png" />
+              <img class="pic" src="./assests/images/monster3.png" />
+              <img class="pic" src="./assests/images/strange2.png" />
+              <!-- hidden elemets -->
+              <img class="pic" src="./assests/images/monster3.png" />
+              <img class="pic" src="./assests/images/strange2.png" />
+              <!-- hidden elements -->
+            </div>
+          </div>
         </div>
-        <div class="face">
-          <div class="box">
-            <img src="./assests/images/face1.png" />
-            <article>
-              <h3>Adam Jensen</h3>
-              <p>
-                Quisque luctus, quam eget molestie commodo, lacus purus cursus
-                purus, nec rutrum tellus dolor id lorem.
-              </p>
-            </article>
-            <div class="icons">
-              <a href="#" class="fa fa-facebook"></a>
-              <a href="#" class="fa fa-google-plus"></a>
-              <a href="#" class="fa fa-twitter"></a>
-              <a href="#" class="fa fa-linkedin"></a>
-            </div>
+        <div class="container">
+          <div class="content">
+            <h3>About Us</h3>
+            <p class="long-text">
+              Fusce dapibus, tellus ac cursus commodo, tortor mauris
+              condimentum. Duis mollis, non commodo luctus, nisi erat porttitor
+              ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac
+              cursus commodo, tortor mauris condimentum nibh.
+            </p>
           </div>
-          <div class="box">
-            <img src="./assests/images/face2.png" />
-            <article>
-              <h3>Desmond Miles</h3>
-              <p>
-                Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam
-                laoreet, viverra lacus ut, ultrices velit.
-              </p>
-            </article>
-            <div class="icons">
-              <a href="#" class="fa fa-facebook"></a>
-              <a href="#" class="fa fa-google-plus"></a>
-              <a href="#" class="fa fa-twitter"></a>
-              <a href="#" class="fa fa-linkedin"></a>
+          <div class="face">
+            <div class="box">
+              <img src="./assests/images/face1.png" />
+              <article>
+                <h3>Adam Jensen</h3>
+                <p>
+                  Quisque luctus, quam eget molestie commodo, lacus purus cursus
+                  purus, nec rutrum tellus dolor id lorem.
+                </p>
+              </article>
+              <div class="icons">
+                <a href="#" class="fa fa-facebook"></a>
+                <a href="#" class="fa fa-google-plus"></a>
+                <a href="#" class="fa fa-twitter"></a>
+                <a href="#" class="fa fa-linkedin"></a>
+              </div>
             </div>
-          </div>
-          <div class="box">
-            <img src="./assests/images/face3.png" />
-            <article>
-              <h3>Scolara Visari</h3>
-              <p>
-                Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet
-                turpis, et consequat felis. Quisque condimentum.
-              </p>
-            </article>
-            <div class="icons">
-              <a href="#" class="fa fa-facebook"></a>
-              <a href="#" class="fa fa-google-plus"></a>
-              <a href="#" class="fa fa-twitter"></a>
-              <a href="#" class="fa fa-linkedin"></a>
+            <div class="box">
+              <img src="./assests/images/face2.png" />
+              <article>
+                <h3>Desmond Miles</h3>
+                <p>
+                  Curabitur vestibulum eget mauris quis laoreet. Phasellus in
+                  quam laoreet, viverra lacus ut, ultrices velit.
+                </p>
+              </article>
+              <div class="icons">
+                <a href="#" class="fa fa-facebook"></a>
+                <a href="#" class="fa fa-google-plus"></a>
+                <a href="#" class="fa fa-twitter"></a>
+                <a href="#" class="fa fa-linkedin"></a>
+              </div>
+            </div>
+            <div class="box">
+              <img src="./assests/images/face3.png" />
+              <article>
+                <h3>Scolara Visari</h3>
+                <p>
+                  Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet
+                  turpis, et consequat felis. Quisque condimentum.
+                </p>
+              </article>
+              <div class="icons">
+                <a href="#" class="fa fa-facebook"></a>
+                <a href="#" class="fa fa-google-plus"></a>
+                <a href="#" class="fa fa-twitter"></a>
+                <a href="#" class="fa fa-linkedin"></a>
+              </div>
             </div>
           </div>
         </div>
